lxml changelog
==============

3.0 (2012-10-07)
================

Features added
--------------

Bugs fixed
----------

* End-of-file handling was incorrect in iterparse() when reading from
  a low-level C file stream and failed in libxml2 2.9.0 due to its
  improved consistency checks.

Other changes
-------------

* The build no longer uses Cython by default unless the generated C files
  are missing.  To use Cython, pass the option "--with-cython".


3.0beta1 (2012-09-26)
=====================

Features added
--------------

* Python level access to (optional) libxml2 memory debugging features
  to simplify debugging of memory leaks etc.

Bugs fixed
----------

* Fix a memory leak in XPath by switching to Cython 0.17.1.

* Some tests were adapted to work with PyPy.

Other changes
-------------

* The code was adapted to work with the upcoming libxml2 2.9.0 release.


3.0alpha2 (2012-08-23)
======================

Features added
--------------

* The ``.iter()`` method of elements now accepts ``tag`` arguments like
  ``"{*}name"`` to search for elements with a given local name in any
  namespace. With this addition, all combinations of wildcards now work
  as expected:
  ``"{ns}name"``, ``"{}name"``, ``"{*}name"``, ``"{ns}*"``, ``"{}*"``
  and ``"{*}*"``.  Note that ``"name"`` is equivalent to ``"{}name"``,
  but ``"*"`` is ``"{*}*"``.
  The same change applies to the ``.getiterator()``, ``.itersiblings()``,
  ``.iterancestors()``, ``.iterdescendants()``, ``.iterchildren()``
  and ``.itertext()`` methods;the ``strip_attributes()``,
  ``strip_elements()`` and ``strip_tags()`` functions as well as the
  ``iterparse()`` class.

* C14N allows specifying the inclusive prefixes to be promoted
  to top-level during exclusive serialisation.

Bugs fixed
----------

* Passing long Unicode strings into the ``feed()`` parser interface
  failed to read the entire string.

Other changes
-------------


3.0alpha1 (2012-07-31)
======================

Features added