@@ -19,7 +19,10 @@ Other changes
 -------------
 
 * The build no longer uses Cython by default unless the generated C files
-  are missing.  To use Cython, pass the option "--with-cython".
+  are missing.  To use Cython, pass the option "--with-cython".  To ignore
+  the fatal build error when Cython is required but not available (e.g. to
+  run special setup.py commands that do not actually run a build), pass
+  "--without-cython".
 
 
 3.0beta1 (2012-09-26)
